global funcitons docs added